# Surf

./: .env.example  .eslintrc.cjs  .gitignore  AGENTS.md  BACKEND_PLAN.md  IMPLEMENTATION.md  KNOWLEDGE_GRAPH_QUERY.md  PRD.md  QUICKSTART.md  README.md  debug_graph.py  electron.vite.config.ts  main.py  memory.py  package-lock.json  package.json  purge_memory.py  pyproject.toml  tailwind.config.ts  test_extractor.py  tsconfig.json  tsconfig.node.json  vitest.config.ts
agents/: browser.py  conversational.py
backend/: .env.example  README.md  build_backend.py  pyproject.toml  requirements.txt  run_native.py  surf-backend.spec  surf.db  surf.db-shm  surf.db-wal  update_icon.py
backend/app/: config.py  conversation.py  crud.py  db.py  llm.py  local_memory.py  main.py  memory.py  memory_extractor.py  message_events.py  models.py  schemas.py  task_executor.py  uploads.py  voice.py
backend/app/routes/: knowledge_graph.py  realtime.py  sessions.py  speech.py  tasks.py  uploads.py
backend/worker/: runner.py  worker.py
src/main/: api.ts  index.ts
src/main/ipc/: channels.ts
src/main/ipc/handlers/: chat.ts  index.ts  knowledge-graph.ts  messageEvents.ts  session.ts  settings.ts  speech.ts
src/preload/: index.ts
src/renderer/: index.html
src/renderer/src/: App.tsx  index.css  vite-env.d.ts
src/renderer/src/components/AccessibilityControls/: AccessibilityControls.tsx
src/renderer/src/hooks/: useAccessibility.ts  useIPC.ts  useRealtime.ts  useSpeech.ts
src/renderer/src/lib/: types.ts  utils.ts
src/renderer/src/store/: chat.ts  graph.ts  session.ts  settings.ts  ui.ts
src/renderer/src/test/: setup.ts
(+19 files in other folders)
