[project]
name = "backend"
version = "0.1.0"
description = "Browser-Use Chat Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]",
    "uvicorn[standard]",
    "sqlalchemy>=2.0",
    "aiosqlite",
    "greenlet",
    "pydantic-settings",
    "python-dotenv",
    "openai",
    "browser-use",
    "zep-cloud>=2.0.0",
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "sse-starlette>=1.6.5",
]

[tool.setuptools.packages.find]
include = ["app*", "worker*"]
