[project]
name = "backend"
version = "0.1.0"
description = "Browser-Use Chat Backend"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "fastapi[standard]==0.115.5",
    "uvicorn[standard]==0.32.1",
    "sqlalchemy[asyncio]>=2.0",
    "aiosqlite",
    "greenlet",
    "pydantic-settings",
    "python-dotenv==1.0.1",
    "openai",
    "browser-use==0.11.9",
    "zep-cloud>=3.16.0",
    "websockets>=12.0",
    "sounddevice>=0.4.6",
    "numpy>=1.26.0",
    "pydantic>=2.11.5",
]

[tool.setuptools.packages.find]
include = ["app*", "worker*"]
